--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -54,5 +54,5 @@ jobs:
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
-            *.tags=${{ steps.meta.outputs.tags }}
-            *.labels=${{ steps.meta.outputs.labels }}
+            ${{ env.TARGET }}.tags=${{ steps.meta.outputs.tags }}
+            ${{ env.TARGET }}.labels=${{ steps.meta.outputs.labels }}
