Simplify Docker Bake Action configuration
- Streamline tag and label configuration in docker-build-push.yml
- Remove target-specific set configuration
- Use direct tags and labels from metadata action

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -54,5 +54,5 @@ jobs:
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
-            ${{ env.TARGET }}.tags=${{ steps.meta.outputs.tags }}
-            ${{ env.TARGET }}.labels=${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
