Update Docker Bake Action metadata configuration
- Modify tag and label handling in docker-build-push.yml
- Use JSON parsing to correctly set tags and labels from metadata action
- Improve metadata configuration for Docker image builds

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -54,5 +54,5 @@ jobs:
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+            *.tags=${{ join(fromJSON(steps.meta.outputs.json).tags, ',') }}
+            *.labels=${{ join(fromJSON(steps.meta.outputs.json).labels, ',') }}
