--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -55,4 +55,4 @@ jobs:
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
             *.tags=${{ join(fromJSON(steps.meta.outputs.json).tags, ',') }}
-            *.labels=${{ join(fromJSON(steps.meta.outputs.json).labels, ',') }}
+            ${{ join(format('*.labels.%s', fromJSON(steps.meta.outputs.json).labels), '\n') }}
