--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -33,16 +33,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=sha,format=long
-            type=raw,value=${{ env.TARGET }}
-
       - name: Build and push Docker image
         uses: docker/bake-action@v5
         with:
@@ -54,4 +44,6 @@ jobs:
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
-            *.tags=${{ join(fromJSON(steps.meta.outputs.json).tags, ',') }}
+            *.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+            *.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TARGET }}
+            *.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
