Simplify Docker image tag generation in GitHub Actions workflow
- Remove Docker metadata action from workflow
- Directly generate tags using environment variables and GitHub context
- Use a consistent tag format with target, branch name, and commit SHA
- Streamline tag generation process in docker-build-push.yml

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -33,17 +33,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-            type=raw,value=${{ github.ref_name }}
-            type=raw,value=${{ github.sha }}
-            type=raw,value=${{ env.TARGET }}
-
       - name: Build and push Docker image
         uses: docker/bake-action@v6
         with:
@@ -55,4 +44,4 @@ jobs:
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
-            *.tags=${{ steps.meta.outputs.tags }}
+            *.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TARGET }}-${{ github.ref_name }}-${{ github.sha }}
